	* info/info.c (main, initial_file): Make initial_file file-level
	variable.
	(get_initial_file): Set initial_file variable instead of returning a
	value.
	(add_initial_nodes): Use info_reference_free instead of free on
	REFERENCE variables.  Duplicate arguments to info_new_reference so we
	can free them.
	* info/session.c (info_follow_menus): Always free initial_node
	argument before returning.

2014-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/display.c (find_diff): Add braces round "if" command.
	(display_update_window_1): Remove unused variable.
	* info/session.c (isearch_terminate_search_key): Removed.
	* info/session.h: Add missing declarations for get_input_key,
	get_another_input_key.
	* info/session.c (fill_input_buffer): Remove unused variable.

	* info/terminal.c (add_seq_to_byte_map): Take char * argument and cast
	to unsigned char *.

	* info/search.h (enum search_result): Change 'search_failure' value to
	'search_invalid'.
	* info/session.c (info_search_in_node_internal): Return value
	properly.  Don't clobber error message printed for invalid regular
	expression.
	(ask_for_search_string): Return value properly.
	* info/search.c (make_binding): Merged into caller.

2014-08-25  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (set_window_pagetop): If point would end up past
	bottom of displayed part of node, put it on the last displayed line.

2014-08-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (_scroll_forward, _scroll_backward): Arguments
	changed.  All callers updated.  Don't display an error message when
	staying in the same node.
	* doc/info-stnd.texi (Variables): Mention what mouse is used for.
	(Node Commands) <goto-invocation>: Add missing closing parenthesis
	and 'vi-like operation' text.
	* doc/texinfo.texi (Overview): Remove two extra words.

2014-08-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/variables.c (info_variables): New user variable 'mouse'.